ckanext/dgu/theme/public/css/dgu.css
/* ... */
#tagcloud a:hover {
  text-decoration: underline;
}

#tagcloud {
  margin: 10px auto;
  text-align: center;
}

/* User page */
/* --------- */
.user-page .span6 .boxed {
  min-height: 250px;
}
.user-page ul.stats {
  margin: 0 auto;
  width: 280px;
}
.user-page ul.stats li {
  width: 100px;
  list-style-type: none;
  float: left;
  padding: 20px;
  text-align: center
}
.user-page ul.stats strong {
  font-size: 40px;
}
.user-page ul.stats span {
  display: block;
  color: #777;
}
body.login #content {
  width: 450px;
  margin: 0 auto;
}



/* Shopping Basket */
/* --------------- */
#shopping-basket-container {
  display: none;
  overflow: hidden;
  white-space: nowrap;
}
#shopping-basket-container h4 {
  margin-bottom: 0;
}
#shopping-basket {
  min-height: 50px;
  max-height: 150px;
  overflow: scroll;
  overflow-x: hidden;
  white-space: nowrap;
  border: 1px solid #ccc;
  border-top: none;
  margin-left: 0;
  padding: 5px 10px 5px 4px;
  list-style-type: none;
}
#shopping-basket-buttons {
  margin: 10px 0 2px 0;
}
#shopping-basket-reset {
  padding-left: 6px;
  padding-right: 9px;
}
#shopping-basket-submit {
  margin-left: 20px;
  width: 180px;
}
#shopping-basket .x-button {
  padding: 0 6px;
  margin-right: 5px;
  vertical-align: top;
}


/* Facet Menu */
/* ---------- */
#filter-heading {
  height: 52px;
  margin-bottom: 10px;
}
.facet-box {
  margin-bottom: 20px;
}
.widget-container h4,
.facet-box h4 {
  color: #656565;
  padding-bottom: 3px;
  margin-bottom: 8px;
  border-bottom: 1px solid #ccc;
}
.facet-box > ul {
  list-style-type: none;
  margin: 0;
  padding: 0 15px;
}
.facet-box .lower > ul li {
  margin: 8px 0;
}
.facet-box .lower > ul li:first-child {
  margin-top: 14px;
}
.facet-box .lower > ul li:last-child {
  margin-bottom: 14px;
}
.facet-box .inline-icon {
  display: none;
}
.facet-box img.facets-title {
  height: 22px;
  width: 22px;
  vertical-align: top;
  margin-right: 8px;
}
.facet-box img.facets-radio {
  height: 16px;
  width: 16px;
  vertical-align: top;
  margin-right: 8px;
}
ul.property-list {
  margin-bottom: 10px;
}
.more-button {
  height: 12px;
  padding: 4px 0;
  margin: 0 auto;
  width: 100%;
  display: block;
  text-align: center;
}



/* Dataset */
/* ------- */
ul.datasets {
  list-style-type: none;
  width: 97%;
  margin: -24px auto 0 auto;0;
  position: relative;
  z-index: 1;
}
ul.datasets .dataset {
  margin-bottom: 30px;
}
ul.datasets .dataset img.dataset-icon {
  float: left;
  width: 45px;
  height: 45px;
  margin-right: 10px;
}
ul.datasets .dataset-header {
  display: block;
  min-height: 52px;
  margin-bottom: 12px;
  border-bottom: 1px solid #aaa;
  color: #666;
}
ul.datasets .dataset-header:hover {
  text-decoration: none;
  color: #470;
}
ul.datasets .dataset-header:hover .underlined { 
  text-decoration: underline; 
}
ul.datasets .dataset-header       .suffix  { color: #fff; }
ul.datasets .dataset-header:hover .suffix  { color: #690; }
ul.datasets .dataset h4 {
  color: #666;
  margin: 4px 0;
  font-size: 12px;
}
ul.datasets .dataset h4 ul {
  display: inline;
  list-style-type: none;
  margin: 0;
}
ul.datasets .dataset h4 ul li {
  margin-left: 10px;
  /* Cross-browser inline-block positioning */
  display: inline-block;
  zoom: 1;
  *display: inline;
}
ul.datasets .dataset .map-buttons {
  float: right;
  margin-top: 12px;
}
ul.datasets .dataset .btn-preview {
  margin-left: 5px;
}
ul.datasets .dataset .preview-add .btn-preview,
ul.datasets .dataset .preview-remove .btn-preview { 
  width: 160px;
  padding-left: 0;
  padding-right: 10px;
}
img.dataset-logo {
  float: right;
  padding: 5px;
}
img.dataset-ribbon {
  float: right;
  margin-right: -21px;
  margin-top: -18px;
}


/* Dataset view page */
td.dataset-label {
  font-weight: bold;
  text-align: right;
}
#dataset-resources {
  margin-bottom: 20px;
}
.table .dataset-label {
  width: 180px;
}

div.resource-actions {
  position: relative;
  float: right;
}
div.resource-actions .btn{
  bottom: 3px;
  padding: 8px 10px;
  margin: 0 0 0 7px;
}
.resource-actions .download  {
  padding-top: 2px;
  padding-right: 4px;
}
.resource-actions .download img {
  margin-top: 1px;
  margin-right: 0px;
}
.one-line-link {
  display: block;
  word-wrap: break-word;
  white-space: normal !important;
}
.resources .map-buttons { 
  padding: 12px 7px;
  text-align: right;
 }
#spatial-map {
  height: 220px;
  width: 400px;
}
#social_media span.stButton {
  margin-bottom: 5px;
}

/* Resources */
/* --------- */

.quick-info {
  margin-top: -20px;
}
.quick-info > div {
  margin-bottom: 9px;
}

.resources > .search-result {
  border-left: 2px solid #ccc;
  padding: 8px;
  margin-bottom: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
}
.resources > .search-result:hover {
  background: #f0f0f0;
}
.resources > .search-result .format-box {
  padding: 4px;
  border: 1px solid #ccc;
  background: #f0f0f0;
}
.resources > .search-result .extra-links {
  display: none;
}
.resources > .search-result .resource-description {
  display: none;
}
.resources > .search-result .result-url {
  display: none;
}

/* Resource-list */
/* ------------- */
.resource-list {
  list-style-type: none;
  padding: 0;
  margin: 0 0 15px 0;
}
.resource-list > li {
  background: #fff;
  border: 0;
  border: 1px solid #eee;
  border-top-color: transparent;
  border-left-color: transparent;
  border-right: 0;
  font-weight: bold;
  display: block;
  padding: 5px 10px;
  color: #333;
  position: relative;
}
.resource-list > li > .trimmed-text {
  overflow: hidden;
  white-space: nowrap;
  width: 338px;
}
.resource-list > li.last-child {
  border-bottom-color: transparent;
}
.resource-list > li > .btn-group {
  position: absolute;
  right: 0;
  top: 0;
  z-index: 1;
}
.resource-list > li > .btn {
  position: absolute;
  right: 115px;
  top: 0;
  z-index: 1;
}
.resource-list > li > .format-box {
  position: absolute;
  background: #fff;
  right: 195px;
  top: 2px;
  z-index: 1;
}
.resource-list .dropdown-menu a.disabled {
  color: #666;
}
/* ... */

